# ade

./: README.md  ade.py  install.sh  install_dep.sh  pyproject.toml  uninstall.sh
