[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ade"
version = "1.0.0"
description = "Active Directory Enumeration Script"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "termcolor>=2.0.1",
    "netexec @ git+https://github.com/Pennyw0rth/NetExec",
    "certipy-ad @ git+https://github.com/ly4k/Certipy.git",
    "bloodyad @ git+https://github.com/CravateRouge/bloodyAD.git",
    "bloodhound-ce", 
    "impacket @ git+https://github.com/fortra/impacket.git"
]

[project.scripts]
ade = "ade:main"
