[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ade"
version = "1.0.0"
description = "Active Directory Enumeration Script"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "termcolor>=2.0.1"
]

[project.scripts]
ade = "ade:main"
